--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.js'></script>
-    <link href="./bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
@@ -20,11 +19,50 @@
     </style>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">타임루프</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">일기장</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">후원</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                기타
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">문의</a></li>
+                <li><a class="dropdown-item" href="#">제작자</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">뭐하는 사이트인가?</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">아몰랑</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success col-3 btn-light" type="submit">검색</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <!-- 메인화면 달력 박스-->
     <div id='calendar'></div>
 
     <!-- 일기 작성 버튼 -->
     <button type="button" class="btn btn-primary" id="write-diary">일기 작성</button>
 
+    <!-- 메인 화면 달력 자바스크립트 코드 -->
     <script>
       $(document).ready(function() {
         $('#calendar').fullCalendar({
